changed implem of QR generation to use encryption
