# src/main/java/ph/devcon/rapidpass/controllers/CheckpointRestController.java
@@ -39,7 +39,13 @@ public class CheckpointRestController
     private final JwtSecretsConfig jwtSecretsConfig;
 
     @Value("${qrmaster.skey}")
-    private String qrSkey;
+    private String signingKey;
+
+    @Value("${qrmaster.encryptionKey}")
+    private String encryptionKey;
+
+    @Value("${qrmaster.initializationVector}")
+    private String initializationVector;
 
     /*@Autowired
     public CheckpointRestController(ICheckpointService checkpointService) {
@@ -107,7 +113,12 @@ public class CheckpointRestController
 
         String jwt = JwtGenerator.generateToken(claims, this.jwtSecretsConfig.findGroupSecret(JWT_GROUP));
 
-        CheckpointAuthResponse authResponse = CheckpointAuthResponse.builder().qrKey(qrSkey).accessCode(jwt).build();
+        CheckpointAuthResponse authResponse = CheckpointAuthResponse.builder()
+                .signingKey(this.signingKey)
+                .encryptionKey(this.encryptionKey)
+                .initializationVector(this.initializationVector)
+                .accessCode(jwt)
+                .build();
 
         return ResponseEntity.ok().body(authResponse);
     }
