# src/main/java/ph/devcon/rapidpass/models/CheckpointAuthResponse.java
@@ -6,6 +6,8 @@ import lombok.Data;
 @Data
 @Builder
 public class CheckpointAuthResponse {
-    private String qrKey = null;
-    private String accessCode = null;
+    private String signingKey;
+    private String encryptionKey;
+    private String initializationVector;
+    private String accessCode;
 }
